# understand-clone

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  run.ps1
data/: map.json
include/core/: button.h  font.h  node.h  selector.h  ui.h
include/managers/: scene-manager.h
include/scenes/: menu-scene.h  scene.h  test-scene.h
include/systems/: render-system.h
include/utils/: class-util.h  graphic.h  math.h  vector2int.h
src/: main.cpp
src/core/: button.cpp  font.cpp  node.cpp  selector.cpp  ui.cpp
src/managers/: scene-manager.cpp
src/scenes/: menu-scene.cpp  scene.cpp  test-scene.cpp
src/systems/: render-system.cpp
src/utils/: graphic.cpp
